force-app/main/default/objects/leaseworks__List_Of_Banks__c/leaseworks__List_Of_Banks__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Participating Bank</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Participating Banks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>