force-app/main/default/objects/leaseworks__List_Of_Banks__c/fields/leaseworks__Counter_Party__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Counter_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Counterparty</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Participating Banks</relationshipLabel>
    <relationshipName>Participating_Banks</relationshipName>
    <type>Lookup</type>
</CustomField>