force-app/main/default/objects/leaseworks__List_Of_Banks__c/fields/leaseworks__Counterparty__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Counterparty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_2206 Counterparty</label>
    <referenceTo>leaseworks__Bank__c</referenceTo>
    <relationshipLabel>Issuances</relationshipLabel>
    <relationshipName>Banks</relationshipName>
    <type>Lookup</type>
</CustomField>