force-app/main/default/objects/leaseworks__List_Of_Banks__c/fields/leaseworks__Issuance__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Issuance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issuance</label>
    <referenceTo>leaseworks__Issuance__c</referenceTo>
    <relationshipName>List_Of_Banks</relationshipName>
    <type>Lookup</type>
</CustomField>