force-app/main/default/objects/leaseworks__List_Of_Banks__c/fields/leaseworks__Issuance_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Issuance_Type__c</fullName>
    <formula>leaseworks__Issuance__r.leaseworks__Issuance_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issuance Type</label>
    <type>Text</type>
</CustomField>