force-app/main/default/objects/leaseworks__List_Of_Banks__c/fields/leaseworks__Key_IR_Commentary__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Key_IR_Commentary__c</fullName>
    <label>Key IR Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>