force-app/main/default/objects/leaseworks__List_Of_Banks__c/fields/leaseworks__Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lender</fullName>
            </value>
            <value>
                <fullName>Book Runner</fullName>
            </value>
            <value>
                <fullName>Co-Manager</fullName>
            </value>
            <value>
                <fullName>Placement Agent</fullName>
            </value>
            <value>
                <fullName>Lead Placement Agent</fullName>
            </value>
            <value>
                <fullName>Revolver Agent</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
            <value>
                <fullName>Trust 1 Cash Manager</fullName>
            </value>
            <value>
                <fullName>Commerical Banking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>